// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wonder-blocks-modal example 1 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "row",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <button
    aria-label=""
    className=""
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    role="button"
    style={
      Object {
        "::MozFocusInner": Object {
          "border": 0,
        },
        "alignItems": "center",
        "background": "#1865f2",
        "border": "none",
        "borderRadius": 4,
        "boxSizing": "border-box",
        "color": "#ffffff",
        "cursor": "pointer",
        "display": "inline-flex",
        "height": 40,
        "justifyContent": "center",
        "margin": 0,
        "outline": "none",
        "paddingBottom": 0,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 0,
        "position": "relative",
        "textDecoration": "none",
        "touchAction": "manipulation",
        "userSelect": "none",
      }
    }
    tabIndex={0}
    type="button"
  >
    <span
      className=""
      style={
        Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "alignItems": "center",
          "display": "flex",
          "fontFamily": "Lato, sans-serif",
          "fontSize": 16,
          "fontWeight": "bold",
          "lineHeight": "20px",
          "overflow": "hidden",
          "pointerEvents": "none",
          "textOverflow": "ellipsis",
          "whiteSpace": "nowrap",
        }
      }
    >
      Open Modal
    </span>
  </button>
</div>
`;

exports[`wonder-blocks-modal example 2 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "height": 512,
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <div
    className=""
    style={
      Object {
        "alignItems": "center",
        "backgroundImage": "linear-gradient(45deg, #ccc 25%, transparent 25%), linear-gradient(-45deg, #ccc 25%, transparent 25%), linear-gradient(45deg, transparent 75%, #ccc 75%), linear-gradient(-45deg, transparent 75%, #ccc 75%)",
        "backgroundPosition": "0 0, 0 10px, 10px -10px, -10px 0px",
        "backgroundSize": "20px 20px",
        "borderStyle": "solid",
        "borderWidth": 0,
        "bottom": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "center",
        "left": 0,
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "zIndex": 0,
      }
    }
  >
    <div
      className=""
      style={
        Object {
          "alignItems": "stretch",
          "borderRadius": 4,
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexDirection": "row",
          "height": "81.25%",
          "margin": 0,
          "maxHeight": 200,
          "maxWidth": 300,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "width": "93.75%",
          "zIndex": 0,
        }
      }
    >
      <div
        aria-labelledby="wb-modal-title"
        className=""
        role="dialog"
        style={
          Object {
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexDirection": "column",
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "padding": 0,
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          className=""
          style={
            Object {
              "alignItems": "stretch",
              "background": "white",
              "borderStyle": "solid",
              "borderWidth": 0,
              "boxSizing": "border-box",
              "display": "flex",
              "flex": "1 1 auto",
              "flexDirection": "column",
              "height": "100%",
              "margin": 0,
              "minHeight": 0,
              "minWidth": 0,
              "overflow": "hidden",
              "padding": 0,
              "position": "relative",
              "width": "100%",
              "zIndex": 0,
            }
          }
        >
          <button
            aria-label="Close modal"
            className=""
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "::MozFocusInner": Object {
                  "border": 0,
                },
                "alignItems": "center",
                "background": "none",
                "border": "none",
                "boxSizing": "border-box",
                "color": "rgba(33,36,44,0.64)",
                "cursor": "pointer",
                "display": "inline-flex",
                "height": 40,
                "justifyContent": "center",
                "left": 16,
                "margin": -8,
                "outline": "none",
                "padding": 0,
                "position": "absolute",
                "textDecoration": "none",
                "top": 16,
                "touchAction": "manipulation",
                "width": 40,
                "zIndex": 1,
              }
            }
            tabIndex={0}
            type="button"
          >
            <svg
              className=""
              height={24}
              style={
                Object {
                  "display": "inline-block",
                  "flexGrow": 0,
                  "flexShrink": 0,
                  "verticalAlign": "text-bottom",
                }
              }
              viewBox="0 0 24 24"
              width={24}
            >
              <path
                d="M12 10.586L7.706 6.293a1 1 0 1 0-1.413 1.413L10.586 12l-4.293 4.294a1 1 0 0 0 1.413 1.413L12 13.414l4.294 4.293a1 1 0 0 0 1.413-1.413L13.414 12l4.293-4.294a1 1 0 1 0-1.413-1.413L12 10.586z"
                fill="currentColor"
              />
            </svg>
          </button>
          <div
            className=""
            style={
              Object {
                "alignItems": "stretch",
                "borderStyle": "solid",
                "borderWidth": 0,
                "boxSizing": "border-box",
                "display": "block",
                "flex": 1,
                "flexDirection": "column",
                "margin": 0,
                "minHeight": 0,
                "minWidth": 0,
                "overflow": "auto",
                "padding": 0,
                "position": "relative",
                "zIndex": 0,
              }
            }
          >
            <div
              className=""
              style={
                Object {
                  "alignItems": "stretch",
                  "background": "#0a2a66",
                  "borderStyle": "solid",
                  "borderWidth": 0,
                  "boxSizing": "border-box",
                  "color": "#ffffff",
                  "display": "flex",
                  "flex": "0 0 auto",
                  "flexDirection": "row",
                  "margin": 0,
                  "maxHeight": 108,
                  "minHeight": 0,
                  "minWidth": 0,
                  "padding": 0,
                  "paddingBottom": 8,
                  "paddingLeft": 64,
                  "paddingRight": 64,
                  "paddingTop": 8,
                  "position": "relative",
                  "zIndex": 0,
                }
              }
            >
              <h1>
                title
              </h1>
              <h2 />
            </div>
            <div
              className=""
              style={
                Object {
                  "alignItems": "stretch",
                  "borderStyle": "solid",
                  "borderWidth": 0,
                  "boxSizing": "border-box",
                  "display": "flex",
                  "flex": 1,
                  "flexDirection": "column",
                  "margin": 0,
                  "minHeight": "100%",
                  "minWidth": 0,
                  "padding": 64,
                  "position": "relative",
                  "zIndex": 0,
                }
              }
            >
              <div
                className=""
                style={
                  Object {
                    "alignItems": "stretch",
                    "borderStyle": "solid",
                    "borderWidth": 0,
                    "boxSizing": "border-box",
                    "display": "flex",
                    "flexDirection": "column",
                    "margin": 0,
                    "minHeight": 0,
                    "minWidth": 0,
                    "padding": 0,
                    "position": "relative",
                    "zIndex": 0,
                  }
                }
              >
                <h1
                  className=""
                  style={
                    Object {
                      "@media (maxWidth: 1023px)": Object {
                        "fontSize": 28,
                        "lineHeight": "32px",
                      },
                      "@media (minWidth: 1024px)": Object {
                        "fontSize": 36,
                        "lineHeight": "40px",
                      },
                      "MozOsxFontSmoothing": "grayscale",
                      "WebkitFontSmoothing": "antialiased",
                      "display": "block",
                      "fontFamily": "Lato, sans-serif",
                      "fontWeight": 900,
                      "marginBottom": 0,
                      "marginTop": 0,
                    }
                  }
                >
                  Title
                </h1>
                <span
                  className=""
                  style={
                    Object {
                      "MozOsxFontSmoothing": "grayscale",
                      "WebkitFontSmoothing": "antialiased",
                      "display": "block",
                      "fontFamily": "Lato, sans-serif",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "lineHeight": "22px",
                    }
                  }
                >
                  Hello World!
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`wonder-blocks-modal example 3 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "center",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 32,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <button
    aria-label=""
    className=""
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    role="button"
    style={
      Object {
        "::MozFocusInner": Object {
          "border": 0,
        },
        "alignItems": "center",
        "background": "#1865f2",
        "border": "none",
        "borderRadius": 4,
        "boxSizing": "border-box",
        "color": "#ffffff",
        "cursor": "pointer",
        "display": "inline-flex",
        "height": 40,
        "justifyContent": "center",
        "margin": 0,
        "outline": "none",
        "paddingBottom": 0,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 0,
        "position": "relative",
        "textDecoration": "none",
        "touchAction": "manipulation",
        "userSelect": "none",
      }
    }
    tabIndex={0}
    type="button"
  >
    <span
      className=""
      style={
        Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "alignItems": "center",
          "display": "flex",
          "fontFamily": "Lato, sans-serif",
          "fontSize": 16,
          "fontWeight": "bold",
          "lineHeight": "20px",
          "overflow": "hidden",
          "pointerEvents": "none",
          "textOverflow": "ellipsis",
          "whiteSpace": "nowrap",
        }
      }
    >
      OnePaneDialog
    </span>
  </button>
</div>
`;

exports[`wonder-blocks-modal example 4 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "center",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 32,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <button
    aria-label=""
    className=""
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    role="button"
    style={
      Object {
        "::MozFocusInner": Object {
          "border": 0,
        },
        "alignItems": "center",
        "background": "#1865f2",
        "border": "none",
        "borderRadius": 4,
        "boxSizing": "border-box",
        "color": "#ffffff",
        "cursor": "pointer",
        "display": "inline-flex",
        "height": 40,
        "justifyContent": "center",
        "margin": 0,
        "outline": "none",
        "paddingBottom": 0,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 0,
        "position": "relative",
        "textDecoration": "none",
        "touchAction": "manipulation",
        "userSelect": "none",
      }
    }
    tabIndex={0}
    type="button"
  >
    <span
      className=""
      style={
        Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "alignItems": "center",
          "display": "flex",
          "fontFamily": "Lato, sans-serif",
          "fontSize": 16,
          "fontWeight": "bold",
          "lineHeight": "20px",
          "overflow": "hidden",
          "pointerEvents": "none",
          "textOverflow": "ellipsis",
          "whiteSpace": "nowrap",
        }
      }
    >
      Open modal
    </span>
  </button>
</div>
`;

exports[`wonder-blocks-modal example 5 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <div
    className=""
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "width": "fit-content",
        "zIndex": 0,
      }
    }
  >
    <button
      aria-expanded="true"
      aria-haspopup="menu"
      className=""
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      open={false}
      style={
        Object {
          "::MozFocusInner": Object {
            "border": 0,
          },
          "alignItems": "center",
          "background": "none",
          "border": "none",
          "borderRadius": 4,
          "boxSizing": "border-box",
          "color": "#1865f2",
          "cursor": "pointer",
          "display": "inline-flex",
          "height": 40,
          "justifyContent": "center",
          "margin": 0,
          "outline": "none",
          "position": "relative",
          "textDecoration": "none",
          "touchAction": "manipulation",
        }
      }
      tabIndex={0}
      type="button"
    >
      <div
        className=""
        style={
          Object {
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexDirection": "column",
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "padding": 0,
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <span
          className=""
          style={
            Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "alignItems": "center",
              "display": "inline-block",
              "fontFamily": "Lato, sans-serif",
              "fontSize": 16,
              "fontWeight": "bold",
              "lineHeight": "20px",
              "overflow": "hidden",
              "pointerEvents": "none",
              "textAlign": "left",
              "textOverflow": "ellipsis",
              "userSelect": "none",
              "whiteSpace": "nowrap",
            }
          }
        >
          actions
        </span>
      </div>
      <div
        aria-hidden="true"
        className=""
        style={
          Object {
            "MsFlexBasis": 4,
            "MsFlexPreferredSize": 4,
            "WebkitFlexBasis": 4,
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexBasis": 4,
            "flexDirection": "column",
            "flexShrink": 0,
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "padding": 0,
            "position": "relative",
            "width": 4,
            "zIndex": 0,
          }
        }
      />
      <svg
        className=""
        height={16}
        style={
          Object {
            "display": "inline-block",
            "flexGrow": 0,
            "flexShrink": 0,
            "verticalAlign": "text-bottom",
          }
        }
        viewBox="0 0 16 16"
        width={16}
      >
        <path
          d="M8 8.586l3.293-3.293a1 1 0 0 1 1.414 1.414l-4 4a1 1 0 0 1-1.414 0l-4-4a1 1 0 0 1 1.414-1.414L8 8.586z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`wonder-blocks-modal example 6 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "height": 512,
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <div
    className=""
    style={
      Object {
        "alignItems": "center",
        "backgroundImage": "linear-gradient(45deg, #ccc 25%, transparent 25%), linear-gradient(-45deg, #ccc 25%, transparent 25%), linear-gradient(45deg, transparent 75%, #ccc 75%), linear-gradient(-45deg, transparent 75%, #ccc 75%)",
        "backgroundPosition": "0 0, 0 10px, 10px -10px, -10px 0px",
        "backgroundSize": "20px 20px",
        "borderStyle": "solid",
        "borderWidth": 0,
        "bottom": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "center",
        "left": 0,
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "zIndex": 0,
      }
    }
  >
    <div
      className=""
      style={
        Object {
          "alignItems": "stretch",
          "borderRadius": 4,
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexDirection": "row",
          "height": "81.25%",
          "margin": 0,
          "maxHeight": 624,
          "maxWidth": 576,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "width": "93.75%",
          "zIndex": 0,
        }
      }
    >
      <div
        aria-labelledby="wb-modal-title"
        className=""
        role="dialog"
        style={
          Object {
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexDirection": "column",
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "padding": 0,
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          className=""
          style={
            Object {
              "alignItems": "stretch",
              "background": "white",
              "borderStyle": "solid",
              "borderWidth": 0,
              "boxSizing": "border-box",
              "display": "flex",
              "flex": "1 1 auto",
              "flexDirection": "column",
              "height": "100%",
              "margin": 0,
              "minHeight": 0,
              "minWidth": 0,
              "overflow": "hidden",
              "padding": 0,
              "position": "relative",
              "width": "100%",
              "zIndex": 0,
            }
          }
        >
          <button
            aria-label="Close modal"
            className=""
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "::MozFocusInner": Object {
                  "border": 0,
                },
                "alignItems": "center",
                "background": "none",
                "border": "none",
                "boxSizing": "border-box",
                "color": "rgba(33,36,44,0.64)",
                "cursor": "pointer",
                "display": "inline-flex",
                "height": 40,
                "justifyContent": "center",
                "left": 16,
                "margin": -8,
                "outline": "none",
                "padding": 0,
                "position": "absolute",
                "textDecoration": "none",
                "top": 16,
                "touchAction": "manipulation",
                "width": 40,
                "zIndex": 1,
              }
            }
            tabIndex={0}
            type="button"
          >
            <svg
              className=""
              height={24}
              style={
                Object {
                  "display": "inline-block",
                  "flexGrow": 0,
                  "flexShrink": 0,
                  "verticalAlign": "text-bottom",
                }
              }
              viewBox="0 0 24 24"
              width={24}
            >
              <path
                d="M12 10.586L7.706 6.293a1 1 0 1 0-1.413 1.413L10.586 12l-4.293 4.294a1 1 0 0 0 1.413 1.413L12 13.414l4.294 4.293a1 1 0 0 0 1.413-1.413L13.414 12l4.293-4.294a1 1 0 1 0-1.413-1.413L12 10.586z"
                fill="currentColor"
              />
            </svg>
          </button>
          <div
            className=""
            style={
              Object {
                "alignItems": "stretch",
                "borderStyle": "solid",
                "borderWidth": 0,
                "boxSizing": "border-box",
                "display": "block",
                "flex": 1,
                "flexDirection": "column",
                "margin": 0,
                "minHeight": 0,
                "minWidth": 0,
                "overflow": "auto",
                "padding": 0,
                "position": "relative",
                "zIndex": 0,
              }
            }
          >
            <div
              className=""
              style={
                Object {
                  "alignItems": "stretch",
                  "background": "#0a2a66",
                  "borderStyle": "solid",
                  "borderWidth": 0,
                  "boxSizing": "border-box",
                  "color": "#ffffff",
                  "display": "flex",
                  "flex": "0 0 auto",
                  "flexDirection": "row",
                  "margin": 0,
                  "maxHeight": 108,
                  "minHeight": 0,
                  "minWidth": 0,
                  "padding": 0,
                  "paddingBottom": 8,
                  "paddingLeft": 64,
                  "paddingRight": 64,
                  "paddingTop": 8,
                  "position": "relative",
                  "zIndex": 0,
                }
              }
            >
              <h1>
                Modal with above container
              </h1>
              <h2 />
            </div>
            <div
              className=""
              style={
                Object {
                  "alignItems": "stretch",
                  "borderStyle": "solid",
                  "borderWidth": 0,
                  "boxSizing": "border-box",
                  "display": "flex",
                  "flex": 1,
                  "flexDirection": "column",
                  "margin": 0,
                  "minHeight": "100%",
                  "minWidth": 0,
                  "padding": 64,
                  "paddingBottom": 32,
                  "position": "relative",
                  "zIndex": 0,
                }
              }
            >
              <div
                className=""
                style={
                  Object {
                    "alignItems": "stretch",
                    "borderStyle": "solid",
                    "borderWidth": 0,
                    "boxSizing": "border-box",
                    "display": "flex",
                    "flexDirection": "column",
                    "margin": "0 auto",
                    "maxWidth": 544,
                    "minHeight": 0,
                    "minWidth": 0,
                    "padding": 0,
                    "position": "relative",
                    "zIndex": 0,
                  }
                }
              >
                <span
                  className=""
                  style={
                    Object {
                      "MozOsxFontSmoothing": "grayscale",
                      "WebkitFontSmoothing": "antialiased",
                      "display": "block",
                      "fontFamily": "Lato, sans-serif",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "lineHeight": "22px",
                    }
                  }
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est.
                </span>
              </div>
            </div>
          </div>
          <div
            className=""
            style={
              Object {
                "alignItems": "center",
                "borderStyle": "solid",
                "borderTopColor": "rgba(33,36,44,0.16)",
                "borderTopStyle": "solid",
                "borderTopWidth": 1,
                "borderWidth": 0,
                "boxSizing": "border-box",
                "display": "flex",
                "flex": "0 0 auto",
                "flexDirection": "row",
                "justifyContent": "flex-end",
                "margin": 0,
                "minHeight": 64,
                "minWidth": 0,
                "padding": 0,
                "paddingBottom": 8,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 8,
                "position": "relative",
                "zIndex": 0,
              }
            }
          >
            <button
              aria-label=""
              className=""
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchStart={[Function]}
              role="button"
              style={
                Object {
                  "::MozFocusInner": Object {
                    "border": 0,
                  },
                  "alignItems": "center",
                  "background": "#1865f2",
                  "border": "none",
                  "borderRadius": 4,
                  "boxSizing": "border-box",
                  "color": "#ffffff",
                  "cursor": "pointer",
                  "display": "inline-flex",
                  "height": 40,
                  "justifyContent": "center",
                  "margin": 0,
                  "outline": "none",
                  "paddingBottom": 0,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 0,
                  "position": "relative",
                  "textDecoration": "none",
                  "touchAction": "manipulation",
                  "userSelect": "none",
                }
              }
              tabIndex={0}
              type="button"
            >
              <span
                className=""
                style={
                  Object {
                    "MozOsxFontSmoothing": "grayscale",
                    "WebkitFontSmoothing": "antialiased",
                    "alignItems": "center",
                    "display": "flex",
                    "fontFamily": "Lato, sans-serif",
                    "fontSize": 16,
                    "fontWeight": "bold",
                    "lineHeight": "20px",
                    "overflow": "hidden",
                    "pointerEvents": "none",
                    "textOverflow": "ellipsis",
                    "whiteSpace": "nowrap",
                  }
                }
              >
                Button (no-op)
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        className=""
        style={
          Object {
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "bottom": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexDirection": "column",
            "left": 0,
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "padding": 0,
            "pointerEvents": "none",
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": 1,
          }
        }
      >
        <div
          className=""
          style={
            Object {
              "alignItems": "stretch",
              "background": "url(/modal-above.png)",
              "backgroundSize": "cover",
              "borderStyle": "solid",
              "borderWidth": 0,
              "boxSizing": "border-box",
              "display": "flex",
              "flexDirection": "column",
              "height": 496,
              "left": -100,
              "margin": 0,
              "minHeight": 0,
              "minWidth": 0,
              "padding": 0,
              "position": "absolute",
              "top": -20,
              "width": 787,
              "zIndex": 0,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`wonder-blocks-modal example 7 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "height": 512,
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <div
    className=""
    style={
      Object {
        "alignItems": "center",
        "backgroundImage": "linear-gradient(45deg, #ccc 25%, transparent 25%), linear-gradient(-45deg, #ccc 25%, transparent 25%), linear-gradient(45deg, transparent 75%, #ccc 75%), linear-gradient(-45deg, transparent 75%, #ccc 75%)",
        "backgroundPosition": "0 0, 0 10px, 10px -10px, -10px 0px",
        "backgroundSize": "20px 20px",
        "borderStyle": "solid",
        "borderWidth": 0,
        "bottom": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "center",
        "left": 0,
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "zIndex": 0,
      }
    }
  >
    <div
      className=""
      style={
        Object {
          "alignItems": "stretch",
          "borderRadius": 4,
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexDirection": "row",
          "height": "81.25%",
          "margin": 0,
          "maxHeight": 400,
          "maxWidth": 400,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "width": "93.75%",
          "zIndex": 0,
        }
      }
    >
      <div
        aria-labelledby="wb-modal-title"
        className=""
        role="dialog"
        style={
          Object {
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexDirection": "column",
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "padding": 0,
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          className=""
          style={
            Object {
              "alignItems": "stretch",
              "background": "white",
              "borderStyle": "solid",
              "borderWidth": 0,
              "boxSizing": "border-box",
              "display": "flex",
              "flex": "1 1 auto",
              "flexDirection": "column",
              "height": "100%",
              "margin": 0,
              "minHeight": 0,
              "minWidth": 0,
              "overflow": "hidden",
              "padding": 0,
              "position": "relative",
              "width": "100%",
              "zIndex": 0,
            }
          }
        >
          <button
            aria-label="Close modal"
            className=""
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "::MozFocusInner": Object {
                  "border": 0,
                },
                "alignItems": "center",
                "background": "none",
                "border": "none",
                "boxSizing": "border-box",
                "color": "rgba(33,36,44,0.64)",
                "cursor": "pointer",
                "display": "inline-flex",
                "height": 40,
                "justifyContent": "center",
                "left": 16,
                "margin": -8,
                "outline": "none",
                "padding": 0,
                "position": "absolute",
                "textDecoration": "none",
                "top": 16,
                "touchAction": "manipulation",
                "width": 40,
                "zIndex": 1,
              }
            }
            tabIndex={0}
            type="button"
          >
            <svg
              className=""
              height={24}
              style={
                Object {
                  "display": "inline-block",
                  "flexGrow": 0,
                  "flexShrink": 0,
                  "verticalAlign": "text-bottom",
                }
              }
              viewBox="0 0 24 24"
              width={24}
            >
              <path
                d="M12 10.586L7.706 6.293a1 1 0 1 0-1.413 1.413L10.586 12l-4.293 4.294a1 1 0 0 0 1.413 1.413L12 13.414l4.294 4.293a1 1 0 0 0 1.413-1.413L13.414 12l4.293-4.294a1 1 0 1 0-1.413-1.413L12 10.586z"
                fill="currentColor"
              />
            </svg>
          </button>
          <div
            className=""
            style={
              Object {
                "alignItems": "stretch",
                "borderStyle": "solid",
                "borderWidth": 0,
                "boxSizing": "border-box",
                "display": "block",
                "flex": 1,
                "flexDirection": "column",
                "margin": 0,
                "minHeight": 0,
                "minWidth": 0,
                "overflow": "auto",
                "padding": 0,
                "position": "relative",
                "zIndex": 0,
              }
            }
          >
            <div
              className=""
              style={
                Object {
                  "alignItems": "stretch",
                  "background": "#0a2a66",
                  "borderStyle": "solid",
                  "borderWidth": 0,
                  "boxSizing": "border-box",
                  "color": "#ffffff",
                  "display": "flex",
                  "flex": "0 0 auto",
                  "flexDirection": "row",
                  "margin": 0,
                  "maxHeight": 108,
                  "minHeight": 0,
                  "minWidth": 0,
                  "padding": 0,
                  "paddingBottom": 8,
                  "paddingLeft": 64,
                  "paddingRight": 64,
                  "paddingTop": 8,
                  "position": "relative",
                  "zIndex": 0,
                }
              }
            >
              <h1>
                Custom modal
              </h1>
              <h2>
                With long content
              </h2>
            </div>
            <div
              className=""
              style={
                Object {
                  "alignItems": "stretch",
                  "borderStyle": "solid",
                  "borderWidth": 0,
                  "boxSizing": "border-box",
                  "display": "flex",
                  "flex": 1,
                  "flexDirection": "column",
                  "margin": 0,
                  "minHeight": "100%",
                  "minWidth": 0,
                  "padding": 64,
                  "paddingBottom": 32,
                  "position": "relative",
                  "zIndex": 0,
                }
              }
            >
              <div
                className=""
                style={
                  Object {
                    "alignItems": "stretch",
                    "borderStyle": "solid",
                    "borderWidth": 0,
                    "boxSizing": "border-box",
                    "display": "flex",
                    "flexDirection": "column",
                    "margin": 0,
                    "minHeight": 0,
                    "minWidth": 0,
                    "padding": 0,
                    "position": "relative",
                    "zIndex": 0,
                  }
                }
              >
                <span
                  className=""
                  style={
                    Object {
                      "MozOsxFontSmoothing": "grayscale",
                      "WebkitFontSmoothing": "antialiased",
                      "display": "block",
                      "fontFamily": "Lato, sans-serif",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "lineHeight": "22px",
                    }
                  }
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est.
                </span>
                <span
                  className=""
                  style={
                    Object {
                      "MozOsxFontSmoothing": "grayscale",
                      "WebkitFontSmoothing": "antialiased",
                      "display": "block",
                      "fontFamily": "Lato, sans-serif",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "lineHeight": "22px",
                    }
                  }
                >
                  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                </span>
                <span
                  className=""
                  style={
                    Object {
                      "MozOsxFontSmoothing": "grayscale",
                      "WebkitFontSmoothing": "antialiased",
                      "display": "block",
                      "fontFamily": "Lato, sans-serif",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "lineHeight": "22px",
                    }
                  }
                >
                  Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                </span>
              </div>
            </div>
          </div>
          <div
            className=""
            style={
              Object {
                "alignItems": "center",
                "borderStyle": "solid",
                "borderTopColor": "rgba(33,36,44,0.16)",
                "borderTopStyle": "solid",
                "borderTopWidth": 1,
                "borderWidth": 0,
                "boxSizing": "border-box",
                "display": "flex",
                "flex": "0 0 auto",
                "flexDirection": "row",
                "justifyContent": "flex-end",
                "margin": 0,
                "minHeight": 64,
                "minWidth": 0,
                "padding": 0,
                "paddingBottom": 8,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 8,
                "position": "relative",
                "zIndex": 0,
              }
            }
          >
            <button
              aria-label=""
              className=""
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchStart={[Function]}
              role="button"
              style={
                Object {
                  "::MozFocusInner": Object {
                    "border": 0,
                  },
                  "alignItems": "center",
                  "background": "#1865f2",
                  "border": "none",
                  "borderRadius": 4,
                  "boxSizing": "border-box",
                  "color": "#ffffff",
                  "cursor": "pointer",
                  "display": "inline-flex",
                  "height": 40,
                  "justifyContent": "center",
                  "margin": 0,
                  "outline": "none",
                  "paddingBottom": 0,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 0,
                  "position": "relative",
                  "textDecoration": "none",
                  "touchAction": "manipulation",
                  "userSelect": "none",
                }
              }
              tabIndex={0}
              type="button"
            >
              <span
                className=""
                style={
                  Object {
                    "MozOsxFontSmoothing": "grayscale",
                    "WebkitFontSmoothing": "antialiased",
                    "alignItems": "center",
                    "display": "flex",
                    "fontFamily": "Lato, sans-serif",
                    "fontSize": 16,
                    "fontWeight": "bold",
                    "lineHeight": "20px",
                    "overflow": "hidden",
                    "pointerEvents": "none",
                    "textOverflow": "ellipsis",
                    "whiteSpace": "nowrap",
                  }
                }
              >
                Button (no-op)
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        className=""
        style={
          Object {
            "alignItems": "stretch",
            "borderStyle": "solid",
            "borderWidth": 0,
            "bottom": 0,
            "boxSizing": "border-box",
            "display": "flex",
            "flexDirection": "column",
            "left": 0,
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "padding": 0,
            "pointerEvents": "none",
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": 1,
          }
        }
      >
        <div
          className=""
          style={
            Object {
              "alignItems": "stretch",
              "background": "url(/modal-above.png)",
              "backgroundSize": "cover",
              "borderStyle": "solid",
              "borderWidth": 0,
              "boxSizing": "border-box",
              "display": "flex",
              "flexDirection": "column",
              "height": 397,
              "left": -120,
              "margin": 0,
              "minHeight": 0,
              "minWidth": 0,
              "padding": 0,
              "position": "absolute",
              "top": 40,
              "width": 630,
              "zIndex": 0,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;
